--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="en">
 	<head>
 		<meta name="google-site-verification" content="qjZB6IzpSM0as-86oAniT6dozaEbNDV7JMlxs5geplg" />
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		  <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="A personal portfolio website that showcases my work and skills as a professional in the industry.">
+        <meta name="keywords" content="personal portfolio, portfolio website, professional, resume, work experience, skills, abilities, achievements, education, qualifications">
+        <meta name="robots" content="index, follow">
+        <meta name="googlebot" content="index, follow">
+        <meta name="author" content="Abdessattar Elyagoubi">
+        <meta name="copyright" content="Abdessattar Elyagoubi">
+        <meta name="revisit-after" content="2 days">
+        <meta name="expires" content="never">
+        <meta name="rating" content="general">
+        <meta name="distribution" content="global">
+        <meta name="language" content="en">
+        <meta name="document-type" content="Portfolio">
+        <meta name="document-state" content="Published">
+        <meta name="url" content="https://abdessattar.is-a.dev">
+        <meta name="identifier-URL" content="https://abdessattar.is-a.dev">
+        <meta name="category" content="Personal Portfolio">
+        <meta name="coverage" content="Worldwide">
+        <meta name="og:title" content="Abdessattar Elyagoubi - Personal Portfolio">
+        <meta name="og:type" content="website">
+        <meta name="og:url" content="https://abdessattar.is-a.dev">
+        <meta name="og:image" content="https://abdessattar.is-a.dev/imgs/me3.png">
+        <meta name="og:description" content="A personal portfolio website that showcases my work and skills as a professional in the industry.">
+        <meta name="og:site_name" content="Abdessattar Elyagoubi - Personal Portfolio">
+        <meta name="og:locale" content="en_US">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Abdessattar Elyagoubi - Personal Portfolio">
+        <meta name="twitter:description" content="A personal portfolio website that showcases my work and skills as a professional in the industry.">
+        <meta name="twitter:image" content="https://abdessattar.is-a.dev/imgs/me3.png">
+        <meta name="twitter:site" content="@AbdessattarElya">
+        <meta name="twitter:creator" content="@AbdessattarElya">
 		<title>Abdessattar Elyagoubi</title>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<link rel="stylesheet" href="css/all.min.css" />
